--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,9 @@
 on:
   push:
-    branches:
-      - master
+    # Pattern matched against refs/tags
+    tags:        
+      - '*'
+
 name: Deploy Extension
 jobs:
   deploy:
