--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "Programming Languages",
     "Language Packs"
   ],
+  "activationEvents": [
+    "onLanguage:logical-english"
+  ],
   "main": "./out/extension.js",
   "browser": "./out/extension.js",
   "contributes": {
